--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <title>Latihan PWA</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="manifest" href="/manifest.json">
 </head>
 <body>
 <img src="/images/ugm.png" alt="logo ugm" style="height: 150px; width: auto">
