--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <img src="/images/ugm.png" alt="logo ugm" style="height: 150px; width: auto">
 <br>
 <br>
+<button id="btn-notification">Show Notification</button>
+<br>
+<br>
 <label for="gender-select">Gender</label>
 <select id="gender-select">
     <option value="semua">semua</option>
