--- a/index.html
+++ b/index.html
@@ -1,28 +1,34 @@
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-    <title>Latihan PWA</title>
+    <title>PWA-Learn</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="manifest" href="/manifest.json">
 </head>
+
 <body>
-<img src="/images/ugm.png" alt="logo ugm" style="height: 150px; width: auto">
-<br>
-<br>
-<button id="btn-notification">Show Notification</button>
-<br>
-<br>
-<label for="gender-select">Gender</label>
-<select id="gender-select">
-    <option value="semua">semua</option>
-</select>
 
+    <div class="container">
+        <h2 style="text-align:center">PWA Learn</h2>
+        <img src="images/ugm-png-6.png" alt="LOGO UGM" style="height: 150px; display: block; margin: 20px;" class="mx-auto">
+        <button id="btn-notification" class="mx-auto" style="display:block">KUNJUNGI SITUS</button>
+    </div>
+    <label for="gender-select">Gender</label>
+    <select id="gender-select">
+        <option value="semua">semua</option>
+    </select>
 
-<h3>DATA MAHASISWA</h3>
-<div id="mhs-list">
-    <p>Data tidak ditemukan</p>
-</div>
+    <h3>DATA MAHASISWA</h3>
+    <div id="mhs-list">
 
-<script type="text/javascript" src="js/jquery.min.js"></script>
-<script type="text/javascript" src="js/main.js"></script>
+        <p>Data tidak ditemukan</p>
+
+    </div>
+
+    <script type="text/javascript" src="js/jquery.min.js"> </script>
+    <script type="text/javascript" src="js/main.js"> </script>
+    <script type="text/javascript" src="serviceworker.js"> </script>
+
 </body>
 </html>
