--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div class="container">
         <h2 style="text-align:center">PWA Learn</h2>
-        <img src="images/ugm-png-6.png" alt="LOGO UGM" style="height: 150px; display: block; margin: 20px;" class="mx-auto">
+        <img src="images/ugm.png" alt="LOGO UGM" style="height: 150px; display: block; margin: 20px;" class="mx-auto">
         <button id="btn-notification" class="mx-auto" style="display:block">KUNJUNGI SITUS</button>
     </div>
     <label for="gender-select">Gender</label>
